tests/error/comprehension_errors/borrow_after_consume.err
Error: Copy violation (at $FILE:16:16)
   | 
14 | @guppy
15 | def foo(qs: list[qubit] @owned) -> list[int]:
16 |     return [baz(q) for q in qs if bar(q)]
   |                 ^ Variable `q` with non-copyable type `qubit` cannot be
   |                   borrowed ...
   | 
16 |     return [baz(q) for q in qs if bar(q)]
   |                                       - since it was already consumed here

Guppy compilation failed due to 1 previous error
